Layout, Stylus hacks, and a Backstretch fix.

--- a/contents/css/global.styl
+++ b/contents/css/global.styl
@@ -30,6 +30,7 @@ body
 a
   color c-link
   text-decoration none
+  transition color .2s ease-in-out
   &:visited
     color c-link-visited
   &:hover
@@ -75,11 +76,15 @@ h6
 
 
 // Text elements
-p
-  margin 0 auto space()
-  &+p
-    margin-top 0
-    text-indent space(0.5)
+if base-p-style is book
+  p
+    margin 0 auto
+    &+p
+      margin-top 0
+      text-indent space(0.5)
+else
+  p
+    margin 0 auto space()
 b
 strong
   font-weight bold
@@ -109,7 +114,7 @@ small
   line-height 0
 abbr
 acronym
-  border-bottom 1px dotted lighten(c-body, 20%)
+  border-bottom 1px dotted c-abbr
   color c-abbr
   font-variant small-caps
   font-weight 600
